--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "vant": "^2.2.16",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.2"
+    "vue-video-player": "^5.0.2",
+    "vuex": "^3.1.2",
+    "weixin-js-sdk": "^1.4.0-test"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
