--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^3.4.3",
+    "js-sha1": "^0.6.0",
     "vant": "^2.2.16",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
